kubernetes/policies/base/kyverno/mutate-beyla-instrument-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-beyla-instrument-label
  annotations:
    kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-beyla-label
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  beyla.grafana.com/instrument: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              beyla.grafana.com/instrument: "true"
